# cargo-http-registry

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
src/: download.rs  index.rs  lib.rs  main.rs  publish.rs  serve.rs
tests/: end-to-end.rs
