[package]
name = "cargo-http-registry"
version = "0.1.1"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/cargo-http-registry"
repository = "https://github.com/d-e-s-o/cargo-http-registry.git"
readme = "README.md"
description = """
A cargo registry allowing for quick publishing of crates when using
crates.io is just not desired.
"""

[badges]
gitlab = { repository = "d-e-s-o/cargo-http-registry", branch = "master" }

[dependencies]
anyhow = {version = "1.0"}
git2 = {version = "0.13.12"}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sha2 = {version = "0.9.2"}
structopt = {version = "0.3.20"}
tokio = {version = "1.0", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.2", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"]}
warp = {version = "0.3", default-features = false}

[dev-dependencies]
tempfile = {version = "3.1"}
