[package]
name = "cargo-http-registry"
version = "0.1.8"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.64"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/cargo-http-registry"
repository = "https://github.com/d-e-s-o/cargo-http-registry.git"
readme = "README.md"
categories = [
  "command-line-utilities",
  "config",
  "database",
  "development-tools",
  "filesystem",
]
keywords = [
  "cargo",
  "registry",
  "registry-server",
  "http",
  "filesystem",
]
description = """
A cargo registry allowing for quick publishing of crates when using
crates.io is just not desired.
"""

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies]
anyhow = {version = "1.0.14"}
git2 = {version = "0.20"}
serde = {version = "1.0.1", features = ["derive"]}
serde_json = {version = "1.0"}
sha2 = {version = "0.10"}
structopt = {version = "0.3.20"}
tokio = {version = "1.34", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}
warp = {version = "0.3.7", default-features = false}

[dev-dependencies]
tempfile = "3.1"
test-fork = "0.1.3"
tokio = {version = "1.34", default-features = false, features = ["macros", "rt"]}

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
_openssl_sys_unused = {package = "openssl-sys", version = "0.9.64"}
